feat: Add custom script to check that no prisma field is defined a boolean

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
+    "lint:db-schema": "node scripts/disallow-boolean-fields.mjs",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test:db-schema": "node test/scripts/test-lint-db-schema.mjs"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
