--- a/.env.example
+++ b/.env.example
@@ -24,5 +24,5 @@ AUTH_DISCORD_SECRET=""
 DATABASE_URL="postgresql://postgres:password@localhost:5432/jira-release-manager"
 
 # Context7
-# Go to https://context7.com/dashboard to create
+# Go to https://context7.com/dashboard to create an API key
 CONTEXT7_API_KEY=""
