Introduced shadcn ui and implement basic page design

--- a/package.json
+++ b/package.json
@@ -4,39 +4,46 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "next build", "comment": "Builds the Next.js application for production.",
-    "check": "next lint && pnpm run lint:db-schema && tsc --noEmit", "comment": "Runs all checks, including linting, database schema linting, and type checking.",
-    "db:generate": "prisma migrate dev", "comment": "Generates a new database migration based on the Prisma schema.",
-    "db:migrate": "prisma migrate deploy", "comment": "Applies all pending database migrations.",
-    "db:push": "prisma db push", "comment": "Pushes the Prisma schema to the database without generating a migration.",
-    "db:studio": "prisma studio", "comment": "Opens the Prisma Studio to view and edit data in the database.",
-    "dev": "next dev --turbo", "comment": "Starts the Next.js development server with Turbopack.",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache", "comment": "Checks the formatting of all specified files.",
-    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache", "comment": "Formats all specified files.",
-    "postinstall": "prisma generate", "comment": "Generates the Prisma Client after installing dependencies.",
-    "lint": "next lint", "comment": "Lints the codebase using Next.js's ESLint configuration.",
-    "lint:fix": "next lint --fix", "comment": "Lints and fixes all auto-fixable issues.",
-    "lint:db-schema": "node scripts/disallow-boolean-fields.mjs", "comment": "Lints the database schema to disallow boolean fields.",
-    "preview": "next build && next start", "comment": "Builds and starts the Next.js application in production mode.",
-    "start": "next start", "comment": "Starts the Next.js application in production mode.",
-    "typecheck": "tsc --noEmit", "comment": "Checks the TypeScript types without emitting any files.",
-    "test": "jest", "comment": "Runs all tests using Jest.",
-    "test:db-schema": "node test/scripts/test-lint-db-schema.mjs", "comment": "Tests the database schema linting script."
+    "build": "next build",
+    "comment": "Tests the database schema linting script.",
+    "check": "next lint && pnpm run lint:db-schema && tsc --noEmit",
+    "db:generate": "prisma migrate dev",
+    "db:migrate": "prisma migrate deploy",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "dev": "next dev --turbo",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "postinstall": "prisma generate",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "lint:db-schema": "node scripts/disallow-boolean-fields.mjs",
+    "preview": "next build && next start",
+    "start": "next start",
+    "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:db-schema": "node test/scripts/test-lint-db-schema.mjs"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-separator": "^1.1.7",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-resizable-panels": "^3.0.5",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -54,6 +61,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.5.0",
     "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
