--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "comment": "Tests the database schema linting script.",
     "check": "next lint && pnpm run lint:db-schema && tsc --noEmit",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
@@ -22,7 +21,16 @@
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "test": "jest",
-    "test:db-schema": "node test/scripts/test-lint-db-schema.mjs"
+  // package.json
+  {
+    // …
+    "scripts": {
+      // …
+     "test:db-schema": "node tests/scripts/test-lint-db-schema.mjs"
+      // …
+    }
+    // …
+  }
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
