--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "next build",
     "comment": "Tests the database schema linting script.",
-    "check": "next lint && pnpm run lint:db-schema && tsc --noEmit",
+    "check": "eslint . && pnpm run lint:db-schema && tsc --noEmit",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
@@ -15,8 +15,8 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "postinstall": "prisma generate",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "lint:db-schema": "node scripts/disallow-boolean-fields.mjs",
     "preview": "next build && next start",
     "start": "next start",
