--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "comment": "Tests the database schema linting script.",
     "check": "eslint . && pnpm run lint:db-schema && tsc --noEmit",
+    "validate": "pnpm format:check && pnpm check",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
