--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "test": "jest",
     "test:db-schema": "node tests/scripts/test-lint-db-schema.mjs"
   },
+  "engines": {
+    "node": ">=18.18.0",
+    "pnpm": ">=10.0.0"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.16.0",
@@ -41,8 +45,8 @@
     "next": "^15.5.2",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
