--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "type": "module",
   "scripts": {
     "env:check": "node scripts/check-node.mjs",
+   "check": "pnpm run env:check && eslint . && pnpm run lint:db-schema && tsc --noEmit",
+    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+   "preinstall": "node scripts/check-node.mjs",
+    "postinstall": "prisma generate",
     "build": "next build",
     "comment": "Tests the database schema linting script.",
     "check": "eslint . && pnpm run lint:db-schema && tsc --noEmit",
@@ -27,7 +31,8 @@
   },
   "engines": {
     "node": ">=22.0.0 <23",
-    "pnpm": ">=10.0.0"
+  "engines": {
+    "node": ">=22.0.0 <23"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
