--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "next build",
     "comment": "Tests the database schema linting script.",
-    "check": "eslint . && pnpm run lint:db-schema && tsc --noEmit",
-    "validate": "pnpm format:check && pnpm check",
+    "check-all": "eslint . && pnpm run lint:db-schema && tsc --noEmit",
+    "validate-all": "pnpm format:check && pnpm check-all",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
@@ -17,6 +17,7 @@
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "postinstall": "prisma generate",
     "lint": "eslint .",
+    "lint:a11y": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint --fix .",
     "lint:db-schema": "node scripts/disallow-boolean-fields.mjs",
     "preview": "next build && next start",
@@ -58,6 +59,7 @@
     "@types/react-dom": "^19.1.9",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "jest": "^30.1.3",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
