--- a/package.json
+++ b/package.json
@@ -5,30 +5,31 @@
   "type": "module",
   "scripts": {
     "env:check": "node scripts/check-node.mjs",
-    "check": "pnpm run env:check && eslint . && pnpm run lint:db-schema && tsc --noEmit",
+    "check": "pnpm run env:check && eslint . && pnpm run db:lint && tsc --noEmit",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "preinstall": "node scripts/check-node.mjs",
     "postinstall": "prisma generate",
     "build": "next build",
-    "check-all": "eslint . && pnpm run lint:db-schema && tsc --noEmit",
+    "check-all": "eslint . && pnpm run db:lint && tsc --noEmit",
     "validate-all": "pnpm format:check && pnpm check-all",
     "clean": "rm -rf .next tsconfig.tsbuildinfo",
     "db:init": "prisma db execute --file ./init.sql --schema prisma/schema.prisma",
     "db:reset": "prisma migrate reset --force --skip-seed && pnpm db:init && prisma db push",
     "db:generate": "prisma migrate dev",
+    "db:lint": "node scripts/disallow-boolean-fields.mjs",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
+    "db:validate": "prisma validate",
     "db:studio": "prisma studio",
     "dev": "next dev --turbo",
     "lint": "eslint .",
     "lint:a11y": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint --fix .",
-    "lint:db-schema": "node scripts/disallow-boolean-fields.mjs",
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "test": "jest",
+    "test-all": "jest && pnpm test:db-schema",
     "test:db-schema": "node tests/scripts/test-lint-db-schema.mjs"
   },
   "engines": {
