Jira credentials page + version sync

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/jira-release-manager
 # Context7
 # Go to https://context7.com/dashboard to create an API key
 CONTEXT7_API_KEY=""
+
+JIRA_BASE_URL="your-domain.atlassian.com"
+JIRA_PROJECT_KEY="HK"
