--- a/.env.example
+++ b/.env.example
@@ -27,5 +27,5 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/jira-release-manager
 # Go to https://context7.com/dashboard to create an API key
 CONTEXT7_API_KEY=""
 
-JIRA_BASE_URL="your-domain.atlassian.com"
-JIRA_PROJECT_KEY="HK"
+JIRA_BASE_URL=https://your-domain.atlassian.net
+JIRA_PROJECT_KEY=HK
