--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
+NODE_ENV="production"
+
 # Next Auth
 # You can generate a new secret on the command line with:
 # npx auth secret
