--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "scripts": {
     "env:check": "node scripts/check-node.mjs",
-    "check": "pnpm run env:check && eslint . && pnpm run db:lint && tsc --noEmit",
+    "check": "pnpm run env:check && pnpm openapi:check && eslint . && pnpm run db:lint && tsc --noEmit",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "preinstall": "node scripts/check-node.mjs",
     "postinstall": "prisma generate",
     "build": "next build",
-    "check-all": "eslint . && pnpm run db:lint && tsc --noEmit",
+    "check-all": "pnpm openapi:check && eslint . && pnpm run db:lint && tsc --noEmit",
     "validate-all": "pnpm format:check && pnpm check-all",
     "clean": "rm -rf .next tsconfig.tsbuildinfo",
     "db:init": "prisma db execute --file ./init.sql --schema prisma/schema.prisma",
@@ -32,7 +32,9 @@
     "test:all": "jest && pnpm test:db-schema",
     "test": "jest",
     "test:services": "jest tests/services",
-    "test:db-schema": "node tests/scripts/test-lint-db-schema.mjs"
+    "test:db-schema": "node tests/scripts/test-lint-db-schema.mjs",
+    "openapi:gen": "node scripts/run-openapi.cjs",
+    "openapi:check": "node scripts/run-openapi.cjs --check"
   },
   "engines": {
     "node": ">=22.0.0 <23"
@@ -68,6 +70,8 @@
     "@types/node": "^20.19.13",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "esbuild": "^0.25.10",
+    "esbuild-register": "^3.6.0",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.2",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -79,8 +83,13 @@
     "prisma-zod-generator": "^1.20.2",
     "tailwindcss": "^4.1.13",
     "ts-jest": "^29.4.2",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.43.0"
+    "typescript-eslint": "^8.43.0",
+    "yaml": "^2.8.1",
+    "zod-openapi": "github:samchungy/zod-openapi"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
