--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-config-next": "^15.5.4",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "husky": "^9.1.7",
+    "lint-staged": "^15.2.9",
     "jest": "^30.2.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
@@ -90,6 +91,16 @@
     "typescript-eslint": "^8.46.0",
     "yaml": "^2.8.1",
     "zod-openapi": "^5.4.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "prisma/schema.prisma": [
+      "pnpm run db:lint",
+      "prisma validate"
+    ]
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
