removed trpc dependecy in types

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 public-hoist-pattern[]=*eslint*
 public-hoist-pattern[]=*prettier*
+public-hoist-pattern[]=@trpc/*
 engine-strict=true
 strict-peer-dependencies=true
