--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/node": "^20.19.21",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "cookie": "^1.0.2",
     "esbuild": "^0.25.11",
     "esbuild-register": "^3.6.0",
     "eslint": "^9.37.0",
