--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "test": "jest",
     "test:services": "jest tests/services",
     "test:db-schema": "node tests/scripts/test-lint-db-schema.mjs",
+    "entity:expose": "node scripts/entity-expose.mjs",
     "openapi:generate": "node scripts/run-openapi.cjs",
     "openapi:check": "node scripts/run-openapi.cjs --check",
     "check-all": "pnpm run env:check && pnpm openapi:check && pnpm prettier:check && pnpm typecheck && pnpm lint && pnpm run db:lint",
