--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,16 @@ CONTEXT7_API_KEY=""
 
 JIRA_BASE_URL=https://your-domain.atlassian.net
 JIRA_PROJECT_KEY=HK
+
+# OpenTelemetry
+# Server-side service identifier (Node SDK)
+OTEL_SERVICE_NAME=jira-release-manager
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
+OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:4318/v1/metrics
+# Optional shared endpoint overrides
+# OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+# Client-side service identifier (browser SDK) – prefixed with NEXT_PUBLIC so it’s bundled
+NEXT_PUBLIC_OTEL_SERVICE_NAME=jira-release-manager-web
+NEXT_PUBLIC_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
+NEXT_PUBLIC_OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:4318/v1/metrics
+# NEXT_PUBLIC_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
