--- a/.env.example
+++ b/.env.example
@@ -39,8 +39,10 @@ OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
 OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:4318/v1/metrics
 # Optional shared endpoint overrides
 # OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
-# Client-side service identifier (browser SDK) – prefixed with NEXT_PUBLIC so it’s bundled
+# OTEL_DEBUG=false
+# Client-side service identifier (browser SDK) – prefixed with NEXT_PUBLIC so it's bundled
 NEXT_PUBLIC_OTEL_SERVICE_NAME=jira-release-manager-web
 NEXT_PUBLIC_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
 NEXT_PUBLIC_OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:4318/v1/metrics
 # NEXT_PUBLIC_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+# NEXT_PUBLIC_OTEL_DEBUG=false
