--- a/observability/otel-sandbox/Dockerfile
+++ b/observability/otel-sandbox/Dockerfile
@@ -5,7 +5,7 @@ ARG LOKI_VERSION=3.5.7
 ARG PROMETHEUS_VERSION=3.7.3
 ARG GRAFANA_VERSION=12.2.1
 ARG GRAFANA_ALLOY_VERSION=1.11.3
-ARG TARGETOS
+ARG TARGETARCH
 ARG TARGETARCH
 
 ENV DEBIAN_FRONTEND=noninteractive \
