--- a/observability/otel-sandbox/Dockerfile
+++ b/observability/otel-sandbox/Dockerfile
@@ -23,9 +23,10 @@ RUN apt-get update \
 RUN set -eux; \
     mkdir -p /opt/tempo /opt/loki /opt/prometheus /opt/alloy /opt/grafana; \
     mkdir -p /etc/tempo /etc/loki /etc/prometheus /etc/alloy /etc/grafana/provisioning/datasources /etc/grafana/provisioning/dashboards; \
-    mkdir -p /tmp/prometheus /tmp/loki /tmp/tempo /tmp/grafana/logs /tmp/grafana/plugins; \
+    mkdir -p /tmp/prometheus /tmp/loki /tmp/tempo /tmp/grafana/logs /tmp/grafana/plugins /data-alloy; \
     groupadd --system grafana; \
-    useradd --system --home-dir /tmp/grafana --gid grafana grafana
+    useradd --system --home-dir /tmp/grafana --gid grafana grafana; \
+    chown -R grafana:grafana /tmp/prometheus /tmp/loki /tmp/tempo /tmp/grafana /data-alloy
 
 RUN set -eux; \
     case "${TARGETARCH}" in \
