--- a/observability/otel-sandbox/tempo/tempo.yaml
+++ b/observability/otel-sandbox/tempo/tempo.yaml
@@ -3,7 +3,7 @@ stream_over_http_enabled: true
 server:
   http_listen_address: 0.0.0.0
   http_listen_port: 3200
-  log_level: info
+  log_level: warn
 
 query_frontend:
   search:
@@ -15,9 +15,9 @@ distributor:
     otlp:
       protocols:
         grpc:
-          endpoint: 0.0.0.0:4317
+          endpoint: 0.0.0.0:4319
         http:
-          endpoint: 0.0.0.0:4318
+          endpoint: 0.0.0.0:4320
 
 ingester:
   lifecycler:
