--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "db:push": "prisma db push",
     "db:validate": "prisma validate",
     "db:studio": "prisma studio",
-    "dev": "next dev --turbo",
+    "dev": "node scripts/show-otel-hint.mjs && next dev --turbo",
     "lint": "eslint .",
     "lint:a11y": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint --fix .",
@@ -42,15 +42,18 @@
     "@auth/prisma-adapter": "^2.11.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.66.0",
+    "@opentelemetry/auto-instrumentations-web": "^0.54.0",
+    "@opentelemetry/context-zone-peer-dep": "^2.2.0",
+    "@opentelemetry/core": "^2.2.0",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.207.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.207.0",
+    "@opentelemetry/instrumentation": "^0.208.0",
     "@opentelemetry/resources": "^2.2.0",
     "@opentelemetry/sdk-metrics": "^2.2.0",
     "@opentelemetry/sdk-node": "^0.207.0",
     "@opentelemetry/sdk-trace-base": "^2.2.0",
     "@opentelemetry/sdk-trace-web": "^2.2.0",
     "@opentelemetry/semantic-conventions": "^1.37.0",
-    "@opentelemetry/core": "^2.2.0",
     "@prisma/client": "^6.18.0",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
