--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@opentelemetry/sdk-trace-base": "^2.2.0",
     "@opentelemetry/sdk-trace-web": "^2.2.0",
     "@opentelemetry/semantic-conventions": "^1.37.0",
-    "@prisma/client": "^6.18.0",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -62,17 +62,20 @@
     "@tanstack/react-query": "^5.90.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "import-in-the-middle": "^2.0.0",
     "lucide-react": "^0.543.0",
     "next": "^15.5.5",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "require-in-the-middle": "^8.0.1",
     "server-only": "^0.0.1",
     "sonner": "1.7.1",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -93,7 +96,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.18.0",
+    "prisma": "^6.19.0",
     "prisma-zod-generator": "^1.28.3",
     "tailwindcss": "^4.1.14",
     "ts-jest": "^29.4.5",
