--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@tanstack/react-query": "^5.90.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.6.1",
     "import-in-the-middle": "^2.0.0",
     "lucide-react": "^0.543.0",
     "next": "^15.5.5",
