--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:lint": "node scripts/disallow-boolean-fields.mjs",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
+    "db:seed": "prisma db seed",
     "db:validate": "prisma validate",
     "db:studio": "prisma studio",
     "dev": "next dev --turbo",
@@ -33,7 +34,8 @@
     "openapi:generate": "node scripts/run-openapi.cjs",
     "openapi:check": "node scripts/run-openapi.cjs --check",
     "check-all": "pnpm run env:check && pnpm openapi:check && pnpm prettier:check && pnpm typecheck && pnpm lint && pnpm run db:lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "seed:claim-owner": "tsx scripts/claim-seed-owner.ts"
   },
   "engines": {
     "node": ">=22.0.0 <23"
@@ -115,5 +117,8 @@
   "ct3aMetadata": {
     "initVersion": "7.39.3"
   },
-  "packageManager": "pnpm@10.20.0"
+  "packageManager": "pnpm@10.20.0",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  }
 }
