--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "19.1.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.1",
     "require-in-the-middle": "^8.0.1",
     "server-only": "^0.0.1",
