--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
-NODE_ENV="production"
+NODE_ENV="development"
 
 # Next Auth
 # You can generate a new secret on the command line with:
@@ -24,6 +24,8 @@ AUTH_DISCORD_SECRET=""
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/jira-release-manager"
+# Keep DB_PORT in sync with the port in DATABASE_URL; mismatch will fail validation.
+DB_PORT=5432
 
 # Context7
 # Go to https://context7.com/dashboard to create an API key
