Jira Release Manager (/Users/stephan/Documents/Projects/jira-release-manager)
  - Switched DB to shared Postgres host postgres.localhost; .env.example and README updated.
  - Added setup script scripts/setup-shared-postgres.sh to upsert role/DB on shared Postgres; start-database.sh now delegates to shared infra and this script.
  - Postgres version noted as 18; tracking card linked (Fizzy card http://fizzy.localhost/0000001/cards/14).
  - Traefik compose attempt removed; project runs via pnpm dev on port 3000.
  - Dev script binds 0.0.0.0 with configurable port; OTEL hint made non-blocking.
  - Added NEXTAUTH_URL support and sample in .env.example (for Discord auth).
  - db:init fixed (removed unsupported --schema flag).
  - db:studio works when env is loaded; confirmed credential reset: user jira-release-manager, password lJEYC_KhQMBX0gfM, DB jira-release-manager on postgres.localhost.
    Verified connectivity from host/container.
  - Package.json cleanups (removed dev:compose, adjusted scripts).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   postgres:
     image: postgres:18
     container_name: jira-release-manager-postgres
+    profiles: ["local-db"]
     restart: unless-stopped
     environment:
       POSTGRES_USER: ${DB_USER:-postgres}
@@ -25,6 +26,7 @@ services:
       dockerfile: observability/otel-sandbox/Dockerfile
     image: jira-release-manager-otel
     container_name: jira-release-manager-telemetry
+    profiles: ["local-db"]
     restart: unless-stopped
     environment:
       GF_SECURITY_ADMIN_USER: ${GRAFANA_ADMIN_USER:-admin}
