--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "prisma generate",
     "build": "next build",
     "clean": "rm -rf .next tsconfig.tsbuildinfo",
-    "db:init": "prisma db execute --file ./init.sql --schema prisma/schema.prisma",
+    "db:init": "prisma db execute --file ./init.sql",
     "db:reset": "node scripts/dev-db-reset.mjs",
     "db:generate": "prisma migrate dev",
     "db:lint": "node scripts/disallow-boolean-fields.mjs",
@@ -18,8 +18,8 @@
     "db:push": "prisma db push",
     "db:seed": "prisma db seed",
     "db:validate": "prisma validate",
-    "db:studio": "prisma studio",
-    "dev": "node scripts/show-otel-hint.mjs && next dev --turbo",
+    "db:studio": "set -a && [ -f .env ] && source .env && set +a && prisma studio",
+    "dev": "node scripts/show-otel-hint.mjs && next dev --hostname 0.0.0.0 --port ${PORT:-3000} --turbo",
     "lint": "eslint .",
     "lint:a11y": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint --fix .",
@@ -75,6 +75,7 @@
     "next": "^15.5.7",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
     "react": "19.1.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.1",
@@ -134,5 +135,5 @@
   "ct3aMetadata": {
     "initVersion": "7.39.3"
   },
-  "packageManager": "pnpm@10.20.0"
+  "packageManager": "pnpm@10.27.0"
 }
