--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,11 @@ AUTH_SECRET=""
 # Next Auth Discord Provider
 AUTH_DISCORD_ID=""
 AUTH_DISCORD_SECRET=""
+NEXTAUTH_URL="http://localhost:3000"
 
-# Prisma
+# Prisma (shared infra Postgres via Traefik host)
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5432/jira-release-manager"
-# Keep DB_PORT in sync with the port in DATABASE_URL; mismatch will fail validation.
-DB_PORT=5432
+DATABASE_URL="postgresql://jira-release-manager:change-me@postgres.localhost/jira-release-manager"
 
 # Context7
 # Go to https://context7.com/dashboard to create an API key
@@ -39,6 +38,7 @@ JIRA_PROJECT_KEY=HK
 OTEL_SERVICE_NAME=jira-release-manager
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
 OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:4318/v1/metrics
+
 # Optional shared endpoint overrides
 # OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
 # OTEL_DEBUG=false
