- Swapped db:studio script to use dotenv-cli for cross-platform .env loading before prisma studio (package.json:21).   - Added dotenv-cli as a devDependency and updated lockfile (package.json:100, pnpm-lock.yaml).   - Checked docs/business_logic and no updates are needed for this script tweak.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "db:push": "prisma db push",
     "db:seed": "prisma db seed",
     "db:validate": "prisma validate",
-    "db:studio": "set -a && [ -f .env ] && source .env && set +a && prisma studio",
+    "db:studio": "dotenv -e .env -- prisma studio",
     "dev": "node scripts/show-otel-hint.mjs && next dev --hostname 0.0.0.0 --port ${PORT:-3000} --turbo",
     "lint": "eslint .",
     "lint:a11y": "eslint . --ext .ts,.tsx",
@@ -97,6 +97,7 @@
     "@types/react-dom": "^19.2.3",
     "cookie": "^1.0.2",
     "dotenv": "^16.6.1",
+    "dotenv-cli": "^11.0.0",
     "esbuild": "^0.25.12",
     "esbuild-register": "^3.6.0",
     "eslint": "^9.39.1",
