Gate entity expose output behind allow flag

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,9 @@ NEXT_PUBLIC_OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:4318/v1/metrics
 # Observability sandbox (Grafana) credentials
 GRAFANA_ADMIN_USER=admin
 GRAFANA_ADMIN_PASSWORD=hotelkit123
+
+# Entity expose CLI test hook
+# Set ENTITY_EXPOSE_OUTPUT=/abs/path/inside/repo together with
+# ENTITY_EXPOSE_OUTPUT_ALLOW=true to capture scaffold dry-run JSON locally.
+# See docs/guides/create-seed.md for usage.
+ENTITY_EXPOSE_OUTPUT_ALLOW=false
